@@ -1,6 +1,8 @@
 0.2.10 Merged "support for chatzilla" from Issue 135 [hicham.haouari]
        Merged "select which servers to check" from Issue 105 [jrebert]
        Removed references to linux platform from SConscript file (Issue 138)
+       Changed option "select which accounts to check" to "select which accounts to exclude"
+
 
 0.2.9  Fixed problems with icons transparency (Issue 56)
        Fixed code to save window position and re-enabled it by default (Issues 33,49)
